Fix: made alignment perfect for main images.

--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,11 @@ body {
 }
 
 .main-img {
-    margin: 0 2px;
+    margin: 0 2px 0 0;
 }
 
 .vert-img {
-    margin: 2px 0;
+    margin: 2px 0 0 0;
 }
 
 #big-pic {
